# logdirect

./: LICENSE  README.md
logdirect/: .gitignore
logdirect/cpuaccess/: access.cc  access.h  bandwidth.cc  dmabuf.h  lat.sh  latency.cc  makefile  randset.h  utils.h  write.cc
logdirect/cpuaccess/importer/: Makefile  importer.c  importer.ko
logdirect/patches/: 0001-NVMe-Use-genalloc-to-allocate-CMB-regions.patch  0002-NVMe-CMB-on-DMA-BUF.patch
logdirect/remotepath/: CMakeLists.txt  latency.cc  path.cc  path.h  throughput.cc
logdirect/remotepath/include/: flag.h  util.h
logdirect/remotepath/rdmautil/: CMakeLists.txt  rdma_util.cpp  rdma_util.hpp  rdmatest.cc
logdirect/remotepath/scripts/: clientnum.sh  extract.py  valsize.sh
logdirect/remotepath/socketutil/: CMakeLists.txt  socketutil.cc  socketutil.h  socktest.cc
logdirectaccess/: .gitignore  CMakeLists.txt  benchmark.cc  generator.h  server.cc  test.cc
logdirectaccess/database/: CMakeLists.txt  dbtype.h
logdirectaccess/database/bitcask/: CMakeLists.txt
logdirectaccess/database/bitcask/db/: db_impl.cc  db_impl.h
logdirectaccess/database/bitcask/file/: file.h  posix_file.cc  posix_file.h
logdirectaccess/database/bitcask/include/: db.h  env.h  index.h  options.h
logdirectaccess/database/bitcask/libcuckoo/: cuckoohash_map.h
logdirectaccess/database/bitcask/test/: CMakeLists.txt  cuckoo.cc  dbimpl_test.cc
logdirectaccess/database/bitcask/util/: coding.cc  coding.h  hash.h  lock.h
logdirectaccess/database/cuckoodb/libcuckoo/: bucket_container.h
logdirectaccess/database/leveldb/db/: db_impl.cc
logdirectaccess/database/logdb/: logfile.h
logdirectaccess/frontend/: CMakeLists.txt  core.h
logdirectaccess/frontend/group/: client.h  group.cc  mutex.h  server.h
logdirectaccess/frontend/hybrid/: client.h  hybrid.cc  server.h
logdirectaccess/frontend/hybrid/libcuckoo/: CMakeLists.txt  cuckoohash_util.h
logdirectaccess/frontend/pmem/: client.h  pmem.cc  server.h
logdirectaccess/frontend/rdmautil/: CMakeLists.txt  rdmautil.cc  rdmautil.h  socketutil.cc  socketutil.h
logdirectaccess/frontend/sync/: client.h  server.h  sync.cc
logdirectaccess/include/: db.h  dmabuf.h  flags.h  front.h  request.h
logdirectaccess/scripts/: clientnum.sh  extract_lat.py  extract_tp.py  gen.sh  populate.sh  test.sh  valsize.sh
redis/: redis.conf  throughput.sh  valsize.sh
redis/src/: redis-benchmark.c
